infra/compass-core/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compass-core
  namespace: compass-apps
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: / # <-- Updated to /
    alb.ingress.kubernetes.io/healthcheck-success-codes: '200,204' # Accepts 200 or 204
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: compass-core
            port:
              number: 8000
